Fix alignment of priority icon in CSS

--- a/MMM-CalDAV-Tasks.css
+++ b/MMM-CalDAV-Tasks.css
@@ -17,7 +17,7 @@
 }
 
 .MMM-CalDAV-Tasks-Priority-Icon {
-    text-align: left;
+    text-align: center;
     width: 2em;
 }
 
